[package]
name = "vulkan-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"
path = "src/lib.rs"

[[bin]]
name = "sandbox"
path = "src/bin/sandbox.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.8.0"
env_logger = "0.9.0"
gameloop = "0.2.0"
image = "0.24.1"
log = "0.4.16"
vulkano = "0.29.0"
vulkano-shaders = "0.29.0"
vulkano-win = "0.29.0"
winit = "0.26.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
